fix(Overlay): add z-index

--- a/src/components/Overlay/Overlay.css
+++ b/src/components/Overlay/Overlay.css
@@ -30,6 +30,7 @@
   right: 0;
   bottom: 0;
   left: 0;
+  z-index: 9999;
   display: flex;
   background-color: var(--overlay-background);
   align-content: center;
